[gd_scene load_steps=8 format=3 uid="uid://dqr54dd08lhks"]

[ext_resource type="Script" path="res://scripts/joe.gd" id="1_a5mng"]
[ext_resource type="PackedScene" uid="uid://b7tjv03l5fi8l" path="res://scenes/health.tscn" id="2_qov3n"]
[ext_resource type="PackedScene" uid="uid://d0j8b5v0w71pc" path="res://scenes/lanternHP.tscn" id="3_c2x12"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_arqs6"]
albedo_color = Color(0.254902, 0.576471, 0.392157, 1)

[sub_resource type="BoxMesh" id="BoxMesh_7ue4k"]
material = SubResource("StandardMaterial3D_arqs6")

[sub_resource type="BoxShape3D" id="BoxShape3D_16lxf"]

[sub_resource type="SphereShape3D" id="SphereShape3D_6agj8"]

[node name="joe" type="CharacterBody3D" groups=["player"]]
process_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_mask = 7
script = ExtResource("1_a5mng")
metadata/_edit_group_ = true

[node name="body" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
mesh = SubResource("BoxMesh_7ue4k")

[node name="bodyCol" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
shape = SubResource("BoxShape3D_16lxf")

[node name="baseLight" type="OmniLight3D" parent="."]
light_color = Color(1, 1, 0, 1)
light_energy = 0.661
light_volumetric_fog_energy = 5.0

[node name="bars" type="CanvasLayer" parent="."]

[node name="health" parent="bars" instance=ExtResource("2_qov3n")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -240.0
offset_right = 0.0
grow_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="LanternHp" parent="bars" instance=ExtResource("3_c2x12")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -240.0
offset_top = 50.0
offset_right = 0.0
offset_bottom = 73.0
grow_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="hitbox" type="Area3D" parent="."]

[node name="joeAtkArea" type="CollisionShape3D" parent="hitbox"]
shape = SubResource("SphereShape3D_6agj8")

[node name="joeAttack" type="OmniLight3D" parent="hitbox/joeAtkArea"]
light_color = Color(0.894118, 0.737255, 0, 1)
shadow_enabled = true
distance_fade_enabled = true
distance_fade_length = 20.0

[node name="Timer" type="Timer" parent="."]

[node name="playerCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.443025, 0.89651, 0, -0.89651, 0.443025, 0, 10.446, 1.9037)

[node name="lanternReset" type="Timer" parent="."]

[node name="atkCooldown" type="Timer" parent="."]

[connection signal="health_decrease" from="." to="." method="_on_health_decrease"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="lanternReset" to="." method="_on_lantern_reset_timeout"]
[connection signal="timeout" from="atkCooldown" to="." method="_on_atk_cooldown_timeout"]
